--- a/app/src/main/res/layout/activity_company.xml
+++ b/app/src/main/res/layout/activity_company.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
               android:background="#efefef"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -31,7 +31,7 @@
       app:sriv_left_bottom_corner_radius="20dp"
       app:sriv_right_bottom_corner_radius="20dp"
       app:sriv_border_color="#979797"
-      app:sriv_border_width="1dp"
+      app:sriv_border_width="0.5dp"
       android:layout_gravity="center"
       android:layout_width="40dp"
       android:layout_height="40dp"
@@ -65,18 +65,17 @@
 
   </LinearLayout>
 
-  <LinearLayout
-    android:id="@+id/ll_title_bottom_bar"
-    android:visibility="invisible"
-    android:background="#eeeeee"
-    android:layout_width="match_parent"
-    android:layout_height="1dp"/>
-
   <com.puzi.puzi.ui.CusomScrollView
     android:id="@+id/sv_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="#ffffff"
+      android:orientation="vertical">
+
       <LinearLayout
         android:id="@+id/ll_company_container"
         android:orientation="vertical"
@@ -86,17 +85,17 @@
 
         <com.joooonho.SelectableRoundedImageView
           xmlns:app="http://schemas.android.com/apk/res-auto"
-          app:sriv_right_top_corner_radius="75dp"
-          app:sriv_left_top_corner_radius="75dp"
-          app:sriv_left_bottom_corner_radius="75dp"
-          app:sriv_right_bottom_corner_radius="75dp"
+          app:sriv_right_top_corner_radius="52dp"
+          app:sriv_left_top_corner_radius="52dp"
+          app:sriv_left_bottom_corner_radius="52dp"
+          app:sriv_right_bottom_corner_radius="52dp"
           app:sriv_border_color="#979797"
-          app:sriv_border_width="1dp"
+          app:sriv_border_width="0.5dp"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
-          android:layout_marginBottom="16dp"
-          android:layout_width="150dp"
-          android:layout_height="150dp"
+          android:layout_marginBottom="1dp"
+          android:layout_width="104dp"
+          android:layout_height="104dp"
           android:scaleType="centerCrop"
           android:id="@+id/iv_companyProfile_picture"/>
 
@@ -104,32 +103,57 @@
           android:id="@+id/tv_companyName"
           android:gravity="center"
           android:textSize="20sp"
+          android:fontFamily="sans-serif-medium"
+          android:textStyle="normal"
           android:textColor="#333333"
-          android:layout_marginBottom="2dp"
+          android:layout_marginBottom="4dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
 
         <TextView
           android:id="@+id/tv_companyComment"
           android:gravity="center"
-          android:textSize="16sp"
+          android:textSize="12sp"
           android:textColor="#6d6d6d"
-          android:layout_marginBottom="24dp"
+          android:layout_marginBottom="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
 
+        <Button
+          android:layout_width="80dp"
+          android:layout_height="22dp"
+          android:gravity="center"
+          android:text="애독하기"
+          android:textSize="12sp"
+          android:textColor="#ff2470"
+          android:layout_marginBottom="14dp"
+          android:layout_gravity="center_horizontal"
+          android:background="@drawable/button_like_off"
+          android:id="@+id/ibtn_like"/>
+
       </LinearLayout>
+
       <LinearLayout
         android:layout_width="match_parent"
-        android:background="#efefef"
-        android:layout_height="match_parent"/>
+        android:background="#f4f4f4"
+        android:layout_height="10dp"/>
+
       <ListView
         android:id="@+id/lv_profile_channel_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="15dp"
         android:divider="#00000000"
-        android:background="#efefef"/>
+        android:background="#ffffff"/>
     </LinearLayout>
+
   </com.puzi.puzi.ui.CusomScrollView>
+
+  <LinearLayout
+    android:id="@+id/ll_title_bottom_bar"
+    android:visibility="invisible"
+    android:background="#eeeeee"
+    android:layout_width="match_parent"
+    android:layout_height="0.5dp"/>
 
 </LinearLayout>
