--- a/app/src/main/res/layout/item_list_empty_channel.xml
+++ b/app/src/main/res/layout/item_list_empty_channel.xml
@@ -8,8 +8,9 @@
     android:layout_marginTop="20dp"
     android:layout_marginBottom="20dp"
     android:text="등록된 채널이 없습니다."
-    android:textSize="16sp"
+    android:textSize="15sp"
     android:textColor="#333333"
+    android:lineSpacingExtra="9sp"
     android:gravity="center_horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
