--- a/app/src/main/res/layout/item_list_empty_reply.xml
+++ b/app/src/main/res/layout/item_list_empty_reply.xml
@@ -6,10 +6,11 @@
 
   <TextView
     android:layout_marginTop="20dp"
-    android:layout_marginBottom="20dp"
+    android:layout_marginBottom="30dp"
     android:text="등록된 댓글이 없습니다."
-    android:textSize="16sp"
+    android:textSize="15sp"
     android:textColor="#333333"
+    android:lineSpacingExtra="9sp"
     android:gravity="center_horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
