--- a/app/src/main/res/layout/item_coupon_list_child.xml
+++ b/app/src/main/res/layout/item_coupon_list_child.xml
@@ -1,7 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
+              android:padding="0dp"
+              android:layout_margin="0dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+
+  <LinearLayout
+    android:orientation="horizontal"
+    android:padding="0dp"
+    android:layout_marginTop="9dp"
+    android:layout_marginBottom="9dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <LinearLayout
+      android:layout_weight="1"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"/>
+
+    <LinearLayout
+      android:paddingTop="9dp"
+      android:paddingLeft="9dp"
+      android:paddingRight="9dp"
+      android:paddingBottom="12dp"
+      android:orientation="vertical"
+      android:layout_width="156dp"
+      android:layout_height="200dp">
+
+      <com.joooonho.SelectableRoundedImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:sriv_right_top_corner_radius="5dp"
+        app:sriv_right_bottom_corner_radius="5dp"
+        app:sriv_left_top_corner_radius="5dp"
+        app:sriv_left_bottom_corner_radius="5dp"
+        app:sriv_oval="false"
+        android:layout_width="match_parent"
+        android:layout_height="113dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/ibtn_coupon_1"
+        android:background="#00000000"/>
+
+      <TextView
+        android:text="title"
+        android:textSize="16sp"
+        android:textColor="#333333"
+        android:layout_marginTop="4dp"
+        android:typeface="sans"
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:gravity="left"
+        android:id="@+id/tv_coupon_title_1"/>
+
+      <TextView
+        android:text="title"
+        android:textSize="20sp"
+        android:textColor="#333333"
+        android:typeface="sans"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:gravity="right"
+        android:id="@+id/tv_coupon_price_1"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+      android:layout_width="16dp"
+      android:layout_height="match_parent"/>
+
+    <LinearLayout
+      android:orientation="vertical"
+      android:layout_width="156dp"
+      android:layout_height="match_parent">
+
+      <com.joooonho.SelectableRoundedImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:sriv_right_top_corner_radius="5dp"
+        app:sriv_right_bottom_corner_radius="5dp"
+        app:sriv_left_top_corner_radius="5dp"
+        app:sriv_left_bottom_corner_radius="5dp"
+        app:sriv_oval="false"
+        android:layout_width="match_parent"
+        android:layout_height="106dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/ibtn_item_channel_image_2"
+        android:background="#00000000"/>
+
+      <Button
+        android:text="title"
+        android:textSize="10sp"
+        android:textColor="#666666"
+        android:layout_marginTop="1dp"
+        android:typeface="sans"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:background="#00000000"
+        android:layout_width="match_parent"
+        android:layout_height="18dp"
+        android:gravity="left"
+        android:id="@+id/tv_item_channel_company_name_2"/>
+
+      <Button
+        android:text="title"
+        android:textSize="15sp"
+        android:textColor="#333333"
+        android:layout_marginTop="3dp"
+        android:typeface="sans"
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:background="#00000000"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:gravity="left"
+        android:id="@+id/tv_item_channel_title_2"/>
+
+      <LinearLayout
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:layout_weight="1">
+
+        <ImageView
+          android:layout_gravity="center_vertical"
+          android:layout_width="8dp"
+          android:layout_height="8dp"
+          android:layout_marginRight="4dp"
+          android:src="@drawable/oval_2_copy_3"
+          android:id="@+id/iv_item_channel_company_star2_1"/>
+        <ImageView
+          android:layout_gravity="center_vertical"
+          android:layout_width="8dp"
+          android:layout_height="8dp"
+          android:layout_marginRight="4dp"
+          android:src="@drawable/oval_2_copy_3"
+          android:id="@+id/iv_item_channel_company_star2_2"/>
+        <ImageView
+          android:layout_gravity="center_vertical"
+          android:layout_width="8dp"
+          android:layout_height="8dp"
+          android:layout_marginRight="4dp"
+          android:src="@drawable/oval_2_copy_3"
+          android:id="@+id/iv_item_channel_company_star2_3"/>
+        <ImageView
+          android:layout_gravity="center_vertical"
+          android:layout_width="8dp"
+          android:layout_height="8dp"
+          android:layout_marginRight="4dp"
+          android:src="@drawable/oval_2_copy_3"
+          android:id="@+id/iv_item_channel_company_star2_4"/>
+        <ImageView
+          android:layout_gravity="center_vertical"
+          android:layout_width="8dp"
+          android:layout_height="8dp"
+          android:layout_marginRight="4dp"
+          android:src="@drawable/oval_2_copy_3"
+          android:id="@+id/iv_item_channel_company_star2_5"/>
+
+        <TextView
+          android:layout_gravity="center_vertical"
+          android:text="5.0/5.0"
+          android:textSize="12sp"
+          android:textColor="#9b9b9b"
+          android:typeface="sans"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:id="@+id/tv_item_channel_score_2"/>
+
+      </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+      android:layout_weight="1"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"/>
+
+  </LinearLayout>
 
 </LinearLayout>
