--- a/app/src/main/res/layout/item_coupon_list_header.xml
+++ b/app/src/main/res/layout/item_coupon_list_header.xml
@@ -5,6 +5,10 @@
               android:layout_height="match_parent">
 
   <TextView
+    android:layout_marginTop="19dp"
+    android:layout_marginLeft="16dp"
+    android:textSize="16sp"
+    android:textColor="#333333"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"/>
 
