--- a/app/src/main/res/drawable/coupon_line.xml
+++ b/app/src/main/res/drawable/coupon_line.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
   <item>
     <shape android:shape="rectangle">
-      <corners android:radius="10dip" />
-      <stroke android:width="1dp" android:color="#33000000"/>
+      <corners android:radius="5dip" />
+      <stroke android:width="1dp" android:color="#dadada"/>
     </shape>
   </item>
 </layer-list>
