--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent">
 
   <FrameLayout
-    android:id="@+id/fl_level"
+    android:id="@+id/fl_store_detail"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="54dp">
@@ -17,21 +17,21 @@
       android:layout_height="match_parent"
       android:background="@null"
       android:src="@drawable/back"
-      android:id="@+id/ibtn_back_point"/>
+      android:id="@+id/ibtn_back_store"/>
 
     <TextView
-      android:text="쿠폰함"
       android:textSize="15sp"
       android:gravity="center"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:id="@+id/tv_setting_title"/>
+      android:id="@+id/tv_store_detail"/>
 
   </FrameLayout>
-  
+
   <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
   </LinearLayout>
+
 </LinearLayout>
