--- a/app/src/main/res/layout/activity_store_withdraw.xml
+++ b/app/src/main/res/layout/activity_store_withdraw.xml
@@ -7,163 +7,262 @@
   <FrameLayout
     android:id="@+id/fl_level"
     android:orientation="horizontal"
-    android:background="@color/colorPuzi"
     android:layout_width="match_parent"
-    android:layout_height="55dp">
+    android:layout_height="54dp">
 
     <ImageButton
+      android:padding="16dp"
       android:layout_gravity="left|center"
       android:layout_width="50dp"
       android:layout_height="match_parent"
       android:background="@null"
-      android:src="@drawable/back_chevron"
-      android:id="@+id/ibtn_back"/>
+      android:src="@drawable/back"
+      android:id="@+id/ibtn_back_withdraw"/>
 
-    <TextView
-      android:text="출금하기"
-      android:textColor="@color/colorWhite"
-      android:textSize="20sp"
-      android:gravity="center"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/tv_setting_title"/>
   </FrameLayout>
 
   <LinearLayout
-    android:gravity="center"
-    android:background="#EEEEEE"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="77dp">
+    android:layout_height="130dp">
 
-    <TextView
+    <LinearLayout
+      android:id="@+id/ll_withdraw_info"
+      android:orientation="vertical"
       android:gravity="center"
-      android:layout_gravity="center"
-      android:textSize="38sp"
-      android:textStyle="bold"
-      android:text="0"
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:id="@+id/tv_point"/>
+      android:layout_marginTop="35dp"
+      android:layout_width="match_parent"
+      android:layout_height="40dp"
+      android:weightSum="1">
 
-    <ImageView
-      android:layout_marginLeft="10dp"
-      android:background="@drawable/puzi_bi_text_08"
-      android:layout_width="22dp"
-      android:layout_height="30dp"
-      android:id="@+id/tv_p"/>
+      <RelativeLayout
+        android:id="@+id/rl_withdraw_point"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="40dp">
 
-  </LinearLayout>
-  
-  <LinearLayout
-    android:layout_marginTop="15dp"
-    android:layout_gravity="center"
-    android:layout_marginLeft="35dp"
-    android:layout_marginRight="35dp"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="84dp">
-    
-    <TextView
-      android:text="은행"
-      android:textColor="#555555"
-      android:textSize="16sp"
-      android:layout_marginBottom="8dp"
-      android:layout_width="wrap_content"
-      android:layout_height="24dp"/>
-    <Spinner
-      android:hint="은행을 선택하세요"
-      android:layout_width="290dp"
-      android:layout_height="52dp"
-      android:id="@+id/spinner_withdraw"/>
+        <ImageView
+          android:layout_width="40dp"
+          android:layout_height="40dp"
+          android:src="@mipmap/level"
+          android:id="@+id/iv_withdraw_rankImage"/>
 
-  </LinearLayout>
+        <TextView
+          android:gravity="center"
+          android:textSize="32sp"
+          android:textColor="@color/colorBlack"
+          android:text="100,000"
+          android:layout_marginRight="10dp"
+          android:layout_marginLeft="10dp"
+          android:layout_width="wrap_content"
+          android:layout_height="38dp"
+          android:id="@+id/tv_withdraw_point"
+          android:layout_alignParentTop="true"
+          android:layout_toRightOf="@+id/iv_withdraw_rankImage"/>
 
-  <LinearLayout
-    android:layout_marginTop="15dp"
-    android:layout_gravity="center"
-    android:layout_marginLeft="35dp"
-    android:layout_marginRight="35dp"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="84dp">
+      </RelativeLayout>
 
-    <TextView
-      android:text="계좌번호"
-      android:textColor="#555555"
-      android:textSize="16sp"
-      android:layout_marginBottom="8dp"
-      android:layout_width="wrap_content"
-      android:layout_height="24dp"/>
-    <EditText
-      android:hint="계좌 번호를 입력하세요"
-      android:background="@drawable/edittext"
-      android:layout_width="290dp"
-      android:layout_height="52dp"
-      android:id="@+id/edit_account"/>
+    </LinearLayout>
 
-  </LinearLayout>
+    <LinearLayout
+      android:id="@+id/ll_withdraw_today"
+      android:layout_width="match_parent"
+      android:layout_height="24dp"
+      android:layout_marginTop="2dp"
+      android:orientation="horizontal"
+      android:gravity="center">
 
-  <LinearLayout
-    android:layout_marginTop="15dp"
-    android:layout_gravity="center"
-    android:layout_marginLeft="35dp"
-    android:layout_marginRight="35dp"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="84dp">
+      <ImageView
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/rectangle_2"
+        android:layout_width="13.3dp"
+        android:layout_height="13.3dp"
+        android:id="@+id/iv_withdraw_todaypoint"
+        android:layout_alignBottom="@+id/fl_withdraw_point"
+        android:layout_toRightOf="@+id/fl_withdraw_point"
+        android:layout_toEndOf="@+id/fl_withdraw_point"/>
 
-    <TextView
-      android:text="출금금액"
-      android:textColor="#555555"
-      android:textSize="16sp"
-      android:layout_marginBottom="8dp"
-      android:layout_width="wrap_content"
-      android:layout_height="24dp"/>
-    <EditText
-      android:hint="출금금액을 입력하세요"
-      android:background="@drawable/edittext"
-      android:layout_width="290dp"
-      android:layout_height="52dp"
-      android:id="@+id/edit_money"/>
+      <View
+        android:layout_width="5dp"
+        android:layout_height="0dp"/>
+
+      <TextView
+        android:text="1000"
+        android:id="@+id/tv_withdraw_today"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:textSize="16sp"
+        android:textColor="@color/colorTextGray"/>
+
+    </LinearLayout>
 
   </LinearLayout>
 
   <LinearLayout
-    android:layout_marginTop="15dp"
-    android:layout_gravity="center"
-    android:layout_marginLeft="35dp"
-    android:layout_marginRight="35dp"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="84dp">
-
-    <TextView
-      android:text="받는사람"
-      android:textColor="#555555"
-      android:textSize="16sp"
-      android:layout_marginBottom="8dp"
-      android:layout_width="wrap_content"
-      android:layout_height="24dp"/>
-    <EditText
-      android:hint="받는 분을 입력하세요"
-      android:background="@drawable/edittext"
-      android:layout_width="290dp"
-      android:layout_height="52dp"
-      android:id="@+id/edit_recipient"/>
-
+    android:background="#DADADA"
+    android:layout_width="match_parent"
+    android:layout_height="1dp">
   </LinearLayout>
 
-  <Button
-    android:text="출금하기"
-    android:textSize="20sp"
-    android:textColor="@color/colorWhite"
-    android:layout_marginLeft="35dp"
-    android:layout_marginRight="35dp"
-    android:layout_marginTop="15dp"
-    android:background="@drawable/button_puzi"
-    android:layout_gravity="center"
-    android:layout_width="290dp"
-    android:layout_height="52dp"/>
+  <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <LinearLayout
+      android:orientation="vertical"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+
+      <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp">
+
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="24dp"
+          android:layout_marginBottom="8dp"
+          android:textSize="16sp"
+          android:textColor="@color/colorBlack"
+          android:text="은행"
+          android:gravity="left" />
+
+        <Spinner
+          android:id="@+id/sp_withdraw_type"
+          android:prompt="@string/ask_type"
+          android:layout_width="match_parent"
+          android:layout_height="54dp">
+
+        </Spinner>
+
+      </LinearLayout>
+
+      <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp">
+
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="24dp"
+          android:layout_marginBottom="8dp"
+          android:textSize="16sp"
+          android:textColor="@color/colorBlack"
+          android:text="계좌번호"
+          android:gravity="left" />
+
+        <EditText
+          android:background="@drawable/edittext"
+          android:layout_width="match_parent"
+          android:layout_height="64dp"
+          android:textSize="15sp"
+          android:id="@+id/edt_withdraw_account"
+          android:textColorHint="#6D6D6D"
+          android:hint="계좌번호를 입력하세요."
+          android:ems="15"
+          android:maxLines="1"
+          android:paddingBottom="15dp"
+          android:paddingTop="15dp"
+          android:paddingLeft="15dp"/>
+
+      </LinearLayout>
+
+      <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp">
+
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="24dp"
+          android:layout_marginBottom="8dp"
+          android:textSize="16sp"
+          android:textColor="@color/colorBlack"
+          android:text="출금 금액"
+          android:gravity="left" />
+
+        <EditText
+          android:background="@drawable/edittext"
+          android:layout_width="match_parent"
+          android:layout_height="64dp"
+          android:textSize="15sp"
+          android:id="@+id/edt_withdraw_money"
+          android:hint="출금 금액을 입력하세요."
+          android:textColorHint="#6D6D6D"
+          android:maxLength="15"
+          android:maxLines="1"
+          android:paddingBottom="15dp"
+          android:paddingTop="15dp"
+          android:paddingLeft="15dp"/>
+
+      </LinearLayout>
+
+      <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp">
+
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="24dp"
+          android:layout_marginBottom="8dp"
+          android:textSize="16sp"
+          android:textColor="@color/colorBlack"
+          android:text="받는 사람"
+          android:gravity="left" />
+
+        <EditText
+          android:background="@drawable/edittext"
+          android:layout_width="match_parent"
+          android:layout_height="64dp"
+          android:textSize="15sp"
+          android:id="@+id/edt_withdraw_user"
+          android:hint="받는 사람을 입력하세요."
+          android:textColorHint="#6D6D6D"
+          android:maxLength="15"
+          android:maxLines="1"
+          android:paddingBottom="15dp"
+          android:paddingTop="15dp"
+          android:paddingLeft="15dp"/>
+
+      </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:layout_marginTop="37dp"
+        android:layout_marginBottom="35dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp">
+
+        <Button
+          android:text="문의하기"
+          android:layout_width="match_parent"
+          android:layout_height="54dp"
+          android:textSize="16dp"
+          android:textColor="@color/colorWhite"
+          android:background="@drawable/button_puzi"
+          android:id="@+id/btn_withdraw"/>
+
+      </LinearLayout>
+
+    </LinearLayout>
+
+  </ScrollView>
 
 </LinearLayout>
