--- a/app/src/main/res/layout/item_coupon_list_child.xml
+++ b/app/src/main/res/layout/item_coupon_list_child.xml
@@ -21,51 +21,84 @@
       android:layout_height="match_parent"/>
 
     <LinearLayout
-      android:paddingTop="9dp"
-      android:paddingLeft="9dp"
-      android:paddingRight="9dp"
-      android:paddingBottom="12dp"
       android:orientation="vertical"
       android:layout_width="156dp"
-      android:layout_height="200dp">
+      android:layout_height="222dp">
 
-      <com.joooonho.SelectableRoundedImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:sriv_right_top_corner_radius="5dp"
-        app:sriv_right_bottom_corner_radius="5dp"
-        app:sriv_left_top_corner_radius="5dp"
-        app:sriv_left_bottom_corner_radius="5dp"
-        app:sriv_oval="false"
-        android:layout_width="match_parent"
-        android:layout_height="113dp"
-        android:scaleType="centerCrop"
-        android:id="@+id/ibtn_coupon_1"
-        android:background="#00000000"/>
+      <LinearLayout
+        android:background="@drawable/coupon_line"
+        android:paddingTop="9dp"
+        android:paddingLeft="9dp"
+        android:paddingRight="9dp"
+        android:paddingBottom="12dp"
+        android:orientation="vertical"
+        android:layout_width="156dp"
+        android:layout_height="200dp">
+
+        <FrameLayout
+          android:layout_width="match_parent"
+          android:layout_height="104dp">
+
+          <com.joooonho.SelectableRoundedImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            app:sriv_right_top_corner_radius="5dp"
+            app:sriv_right_bottom_corner_radius="5dp"
+            app:sriv_left_top_corner_radius="5dp"
+            app:sriv_left_bottom_corner_radius="5dp"
+            app:sriv_oval="false"
+            android:layout_width="match_parent"
+            android:layout_height="104dp"
+            android:scaleType="centerCrop"
+            android:id="@+id/ibtn_coupon_1"
+            android:background="#00000000"/>
+
+          <ImageView
+            android:id="@+id/iv_coupon_used_1"
+            android:src="@drawable/conrirm_icon"
+            android:visibility="invisible"
+            android:layout_marginTop="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_gravity="right"
+            android:layout_width="48dp"
+            android:layout_height="48dp"/>
+
+        </FrameLayout>
+
+        <TextView
+          android:text="title"
+          android:textSize="16sp"
+          android:textColor="#333333"
+          android:layout_marginTop="4dp"
+          android:typeface="sans"
+          android:maxLines="2"
+          android:ellipsize="end"
+          android:layout_width="match_parent"
+          android:layout_height="48dp"
+          android:gravity="left"
+          android:id="@+id/tv_coupon_title_1"/>
+
+        <TextView
+          android:text="title"
+          android:textSize="20sp"
+          android:textColor="#333333"
+          android:typeface="sans"
+          android:maxLines="1"
+          android:ellipsize="end"
+          android:layout_width="match_parent"
+          android:layout_height="24dp"
+          android:gravity="right"
+          android:id="@+id/tv_coupon_price_1"/>
+
+      </LinearLayout>
 
       <TextView
-        android:text="title"
-        android:textSize="16sp"
-        android:textColor="#333333"
-        android:layout_marginTop="4dp"
-        android:typeface="sans"
-        android:maxLines="2"
-        android:ellipsize="end"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:gravity="left"
-        android:id="@+id/tv_coupon_title_1"/>
-
-      <TextView
-        android:text="title"
-        android:textSize="20sp"
-        android:textColor="#333333"
-        android:typeface="sans"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:layout_width="match_parent"
-        android:layout_height="24dp"
-        android:gravity="right"
-        android:id="@+id/tv_coupon_price_1"/>
+        android:id="@+id/tv_coupon_date_1"
+        android:layout_gravity="center"
+        android:textSize="12sp"
+        android:textColor="#6d6d6d"
+        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="22dp"/>
 
     </LinearLayout>
 
@@ -76,102 +109,82 @@
     <LinearLayout
       android:orientation="vertical"
       android:layout_width="156dp"
-      android:layout_height="match_parent">
-
-      <com.joooonho.SelectableRoundedImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:sriv_right_top_corner_radius="5dp"
-        app:sriv_right_bottom_corner_radius="5dp"
-        app:sriv_left_top_corner_radius="5dp"
-        app:sriv_left_bottom_corner_radius="5dp"
-        app:sriv_oval="false"
-        android:layout_width="match_parent"
-        android:layout_height="106dp"
-        android:scaleType="centerCrop"
-        android:id="@+id/ibtn_item_channel_image_2"
-        android:background="#00000000"/>
-
-      <Button
-        android:text="title"
-        android:textSize="10sp"
-        android:textColor="#666666"
-        android:layout_marginTop="1dp"
-        android:typeface="sans"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:background="#00000000"
-        android:layout_width="match_parent"
-        android:layout_height="18dp"
-        android:gravity="left"
-        android:id="@+id/tv_item_channel_company_name_2"/>
-
-      <Button
-        android:text="title"
-        android:textSize="15sp"
-        android:textColor="#333333"
-        android:layout_marginTop="3dp"
-        android:typeface="sans"
-        android:maxLines="2"
-        android:ellipsize="end"
-        android:background="#00000000"
-        android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:gravity="left"
-        android:id="@+id/tv_item_channel_title_2"/>
+      android:layout_height="222dp">
 
       <LinearLayout
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:layout_weight="1">
+        android:background="@drawable/coupon_line"
+        android:paddingTop="9dp"
+        android:paddingLeft="9dp"
+        android:paddingRight="9dp"
+        android:paddingBottom="12dp"
+        android:orientation="vertical"
+        android:layout_width="156dp"
+        android:layout_height="200dp">
 
-        <ImageView
-          android:layout_gravity="center_vertical"
-          android:layout_width="8dp"
-          android:layout_height="8dp"
-          android:layout_marginRight="4dp"
-          android:src="@drawable/oval_2_copy_3"
-          android:id="@+id/iv_item_channel_company_star2_1"/>
-        <ImageView
-          android:layout_gravity="center_vertical"
-          android:layout_width="8dp"
-          android:layout_height="8dp"
-          android:layout_marginRight="4dp"
-          android:src="@drawable/oval_2_copy_3"
-          android:id="@+id/iv_item_channel_company_star2_2"/>
-        <ImageView
-          android:layout_gravity="center_vertical"
-          android:layout_width="8dp"
-          android:layout_height="8dp"
-          android:layout_marginRight="4dp"
-          android:src="@drawable/oval_2_copy_3"
-          android:id="@+id/iv_item_channel_company_star2_3"/>
-        <ImageView
-          android:layout_gravity="center_vertical"
-          android:layout_width="8dp"
-          android:layout_height="8dp"
-          android:layout_marginRight="4dp"
-          android:src="@drawable/oval_2_copy_3"
-          android:id="@+id/iv_item_channel_company_star2_4"/>
-        <ImageView
-          android:layout_gravity="center_vertical"
-          android:layout_width="8dp"
-          android:layout_height="8dp"
-          android:layout_marginRight="4dp"
-          android:src="@drawable/oval_2_copy_3"
-          android:id="@+id/iv_item_channel_company_star2_5"/>
+        <FrameLayout
+          android:layout_width="match_parent"
+          android:layout_height="104dp">
+
+          <com.joooonho.SelectableRoundedImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            app:sriv_right_top_corner_radius="5dp"
+            app:sriv_right_bottom_corner_radius="5dp"
+            app:sriv_left_top_corner_radius="5dp"
+            app:sriv_left_bottom_corner_radius="5dp"
+            app:sriv_oval="false"
+            android:layout_width="match_parent"
+            android:layout_height="104dp"
+            android:scaleType="centerCrop"
+            android:id="@+id/ibtn_coupon_2"
+            android:background="#00000000"/>
+
+          <ImageView
+            android:id="@+id/iv_coupon_used_2"
+            android:src="@drawable/conrirm_icon"
+            android:visibility="invisible"
+            android:layout_marginTop="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_gravity="right"
+            android:layout_width="48dp"
+            android:layout_height="48dp"/>
+
+        </FrameLayout>
 
         <TextView
-          android:layout_gravity="center_vertical"
-          android:text="5.0/5.0"
-          android:textSize="12sp"
-          android:textColor="#9b9b9b"
+          android:text="title"
+          android:textSize="16sp"
+          android:textColor="#333333"
+          android:layout_marginTop="4dp"
           android:typeface="sans"
+          android:maxLines="2"
+          android:ellipsize="end"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:id="@+id/tv_item_channel_score_2"/>
+          android:layout_height="48dp"
+          android:gravity="left"
+          android:id="@+id/tv_coupon_title_2"/>
+
+        <TextView
+          android:text="title"
+          android:textSize="20sp"
+          android:textColor="#333333"
+          android:typeface="sans"
+          android:maxLines="1"
+          android:ellipsize="end"
+          android:layout_width="match_parent"
+          android:layout_height="24dp"
+          android:gravity="right"
+          android:id="@+id/tv_coupon_price_2"/>
 
       </LinearLayout>
+
+      <TextView
+        android:id="@+id/tv_coupon_date_2"
+        android:layout_gravity="center"
+        android:textSize="12sp"
+        android:textColor="#6d6d6d"
+        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="22dp"/>
 
     </LinearLayout>
 
