--- a/app/src/main/res/layout/item_coupon_list_header.xml
+++ b/app/src/main/res/layout/item_coupon_list_header.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
   <TextView
+    android:id="@+id/tv_coupon_header"
     android:layout_marginTop="19dp"
     android:layout_marginLeft="16dp"
     android:textSize="16sp"
     android:textColor="#333333"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_width="wrap_content"
+    android:layout_height="24dp"/>
+
+  <TextView
+    android:id="@+id/tv_coupon_num"
+    android:layout_marginTop="19dp"
+    android:layout_marginLeft="3dp"
+    android:textSize="16sp"
+    android:textColor="#f13d3a"
+    android:layout_width="wrap_content"
+    android:layout_height="24dp"/>
 
 </LinearLayout>
