--- a/app/src/main/res/layout/fragment_channel_detail.xml
+++ b/app/src/main/res/layout/fragment_channel_detail.xml
@@ -4,11 +4,10 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-  <!-- 댓글입력창 -->
   <ScrollView
     android:id="@+id/sv_channel_detail"
     android:layout_marginTop="5dp"
-    android:layout_marginBottom="67dp"
+    android:layout_marginBottom="79dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="none"
@@ -44,7 +43,7 @@
           app:sriv_left_bottom_corner_radius="14.5dp"
           app:sriv_right_bottom_corner_radius="14.5dp"
           app:sriv_border_color="#979797"
-          app:sriv_border_width="1dp"
+          app:sriv_border_width="0.5dp"
           android:layout_marginTop="8dp"
           android:layout_marginRight="14dp"
           android:layout_width="29dp"
@@ -138,6 +137,39 @@
           android:layout_width="0dp"
           android:layout_height="match_parent"/>
 
+        <LinearLayout
+          android:visibility="gone"
+          android:id="@+id/ll_channel_detail_myScore_container"
+          android:orientation="horizontal"
+          android:background="@drawable/button_myscore_back"
+          android:layout_marginRight="16dp"
+          android:layout_width="86dp"
+          android:layout_height="26dp">
+
+          <TextView
+            android:id="@+id/tv_channel_detail_myScore"
+            android:textSize="15sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="#ffffff"
+            android:lineSpacingExtra="4sp"
+            android:layout_width="33dp"
+            android:gravity="center"
+            android:background="@drawable/button_myscore_left_back"
+            android:layout_height="match_parent"/>
+
+          <TextView
+            android:text="평가함"
+            android:textSize="14sp"
+            android:textColor="#dadada"
+            android:lineSpacingExtra="5sp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
         <ImageButton
           android:background="#00000000"
           android:layout_gravity="center_vertical"
@@ -219,6 +251,8 @@
     </LinearLayout>
 
   </ScrollView>
+
+  <!-- 댓글입력창 -->
   <LinearLayout
     android:orientation="vertical"
     android:layout_gravity="bottom"
