--- a/app/src/main/res/layout/item_list_empty_advertise.xml
+++ b/app/src/main/res/layout/item_list_empty_advertise.xml
@@ -9,7 +9,7 @@
     android:layout_marginBottom="20dp"
     android:text="광고가 없습니다."
     android:textSize="15sp"
-    android:textColor="#333333"
+    android:textColor="#6d6d6d"
     android:lineSpacingExtra="9sp"
     android:gravity="center_horizontal"
     android:layout_width="match_parent"
